fix: small devices body overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ main section h1 {
 main .cards {
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(50ch, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(50ch, 100%), 1fr));
 }
 
 main .cards article {
